src/objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>Account_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Asset</label>
        <referenceTo>Account_Asset__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Host</label>
        <referenceTo>Child_Host__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <formula>IF(TODAY()-10= Training_End_Date__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow-Up Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Class__c</fullName>
        <label>Training Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Training__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Card Training</fullName>
                </value>
                <value>
                    <fullName>Network Card Training</fullName>
                </value>
                <value>
                    <fullName>Pacprideonline Training</fullName>
                </value>
                <value>
                    <fullName>Pride Complete Training</fullName>
                </value>
                <value>
                    <fullName>Controller Training</fullName>
                </value>
                <value>
                    <fullName>Equipment Training</fullName>
                </value>
                <value>
                    <fullName>Transfer Pricing</fullName>
                </value>
                <value>
                    <fullName>Franchise Orientation</fullName>
                </value>
                <value>
                    <fullName>Management training</fullName>
                </value>
                <value>
                    <fullName>Operations Training</fullName>
                </value>
                <value>
                    <fullName>Sales Training</fullName>
                </value>
                <value>
                    <fullName>Supplier Vendor Training</fullName>
                </value>
                <value>
                    <fullName>Imaging Training OCI</fullName>
                </value>
                <value>
                    <fullName>Locations Training</fullName>
                </value>
                <value>
                    <fullName>Marketing Portal Training</fullName>
                </value>
                <value>
                    <fullName>New Pacific Pride Website</fullName>
                </value>
                <value>
                    <fullName>Order Desk Training KP Graphics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Results__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Training__c</fullName>
        <label>Type of Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3 Day Training</fullName>
                </value>
                <value>
                    <fullName>Card Registration Series</fullName>
                </value>
                <value>
                    <fullName>Card Registration Training</fullName>
                </value>
                <value>
                    <fullName>Card Training</fullName>
                </value>
                <value>
                    <fullName>Controller Training</fullName>
                </value>
                <value>
                    <fullName>Equipment Training</fullName>
                </value>
                <value>
                    <fullName>File Transfer Training</fullName>
                </value>
                <value>
                    <fullName>FSTP Training</fullName>
                </value>
                <value>
                    <fullName>Marketing Training Webinar</fullName>
                </value>
                <value>
                    <fullName>Navigating the Pacific Pride Website</fullName>
                </value>
                <value>
                    <fullName>Network card training</fullName>
                </value>
                <value>
                    <fullName>Network Card WebEx training</fullName>
                </value>
                <value>
                    <fullName>On site sales training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pacific Pride Basic Trainings 101</fullName>
                </value>
                <value>
                    <fullName>Product Training Webinar</fullName>
                </value>
                <value>
                    <fullName>PTP Training</fullName>
                </value>
                <value>
                    <fullName>Refresher Training</fullName>
                </value>
                <value>
                    <fullName>Salem sales training</fullName>
                </value>
                <value>
                    <fullName>Sales Training Webinar</fullName>
                </value>
                <value>
                    <fullName>Switcher Training</fullName>
                </value>
                <value>
                    <fullName>Vendor Supplier Webinar</fullName>
                </value>
                <value>
                    <fullName>Webinar Training/Building and Growing your Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Asset__c</columns>
        <columns>Training_Date__c</columns>
        <columns>Training_Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Trainings</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account_Asset__c</columns>
        <columns>Type_of_Training__c</columns>
        <columns>Training_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Trainings</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Planned_Trainings</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account_Asset__c</columns>
        <columns>Type_of_Training__c</columns>
        <columns>Training_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <label>Planned Trainings</label>
        <sharedTo/>
    </listViews>
</CustomObject>